2006-11-14  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Wholly replace this script with a critter from one
	of my personal projects, with slight modifications.  This one does
	some sophisticated stuff like probing version numbers of available
	automake and aclocal executables, in order to choose the right one
	accordingly.  All this is necessary to make the build system work
	robustly in custom environments such as Maemo where automake-1.9
	doesn't come preinstalled.
	While we're at it, kill some old cruft such as the check for GNU
	make.  This test was kind of pointless as the $MAKE variable was
	never exported.  Also get rid of the --enable-warnings=hardcore
	magic; this just doesn't belong here and could cause unnecessary
	trouble to non-developers.

2006-10-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/settings.hg: Remove extra ; to avoid a warning, to fix the 
	build.

2006-08-02  Armin Burgmeier  <armin@arbur.net>

	* gtk/src/fontbutton.hg: Renamed constructor argument to font_name
	for gmmproc to produce the correct property name.

2.6.14:

2006-08-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Really initialize atkmm, as described in the last entry. 
	Somehow this change was lost.

2.6.13:

2006-07-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Initizialize atkmm again, to fix a regression introduced 
	in gtkmm 2.6.8. Bug #348912 from Denis Leroy.

2.6.12:

2006-07-24  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Make sure we depend on glibmm 2.6.6, so we get the defines 
	to enable signal handlers.

2.6.11:

2006-07-24  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm-2.4.pc.in: Restore atkmm to the requirements. See my comment for 
	2.6.10.

2006-04-25  Murray Cumming  <murrayc@murrayc.com>

 	* gtk/src/container.ccg:
 	* gtk/src/entrycompletion.ccg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/widget.ccg: Put custom default signal handlers in #ifdefs so that 