@@ -334,6 +334,10 @@ fi
 AC_SUBST(DEMO_SUBDIR)
 
 
+
+GTKMM_ARG_ENABLE_API_MAEMO_EXTENSIONS()
+
+
 AC_ARG_ENABLE(docs, [AC_HELP_STRING([--enable-docs],
               [build the included docs [default=yes]])],,
                         [enable_docs=yes])
