@@ -8,6 +8,10 @@
 #undef GTKMM_MINOR_VERSION
 #undef GTKMM_MICRO_VERSION
 
+#undef GTKMM_ATKMM_ENABLED
+#undef GTKMM_MAEMO_EXTENSIONS_ENABLED
+
+
 #ifdef GLIBMM_CONFIGURE
 /* compiler feature tests that are used during compile time and run-time
    by gtkmm only. */
@@ -22,6 +26,7 @@
 #undef GETC_UNLOCKED
 
 #endif /* GLIBMM_CONFIGURE */
+
 
 #ifdef GLIBMM_DLL
   #if defined(GTKMM_BUILD) && defined(_WINDLL)
