@@ -45862,4 +45862,76 @@ Get the adjustment associated with a #GtkSpinButton
 </return>
 </function>
 
+<function name="gtk_text_buffer_set_rich_text_format">
+<description>
+Sets a new rich text format for the widget.
+
+Since: maemo 1.0
+
+</description>
+<parameters>
+<parameter name="buffer">
+<parameter_description> a #GtkTextBuffer
+</parameter_description>
+</parameter>
+<parameter name="format">
+<parameter_description> name of a collection of tags that the text view supports
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_text_buffer_get_rich_text_format">
+<description>
+
+</description>
+<parameters>
+<parameter name="buffer">
+<parameter_description> a #GtkTextBuffer
+</parameter_description>
+</parameter>
+</parameters>
+<return> the widget&apos;s current rich text format.
+
+Since: maemo 1.0
+</return>
+</function>
+
+<function name="gtk_text_buffer_set_can_paste_rich_text">
+<description>
+Sets whether rich text can be pasted and dropped to the text buffer.
+
+Since: maemo 1.0
+
+</description>
+<parameters>
+<parameter name="buffer">
+<parameter_description> a #GtkTextBuffer
+</parameter_description>
+</parameter>
+<parameter name="can_paste_rich_text">
+<parameter_description> whether rich text pasting and dropping is enabled
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_text_buffer_get_can_paste_rich_text">
+<description>
+
+</description>
+<parameters>
+<parameter name="buffer">
+<parameter_description> a #GtkTextBuffer
+</parameter_description>
+</parameter>
+</parameters>
+<return> whether rich text pasting and dropping is enabled
+
+Since: maemo 1.0
+</return>
+</function>
+
 </root>
