@@ -455,5 +455,12 @@ Glib::ustring TextBuffer::get_text(bool include_hidden_chars)
   return get_text(begin(), end(), include_hidden_chars);
 }
 
+#ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED
+void TextBuffer::set_rich_text_format_all()
+{
+  gtk_text_buffer_set_rich_text_format(gobj(), NULL);
+}
+#endif //GTKMM_MAEMO_EXTENSIONS_ENABLED
+
 } // namespace Gtk
 
