@@ -448,6 +448,23 @@ public:
   _WRAP_METHOD(void begin_user_action(), gtk_text_buffer_begin_user_action)
   _WRAP_METHOD(void end_user_action(), gtk_text_buffer_end_user_action)
 
+
+  //These are only available on the Maemo platform (patched Gtk+):
+
+  _WRAP_METHOD(void set_can_paste_rich_text(bool can_paste_rich_text), gtk_text_buffer_set_can_paste_rich_text, ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED)
+  _WRAP_METHOD(bool get_can_paste_rich_text() const, gtk_text_buffer_get_can_paste_rich_text, ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED)
+
+  _WRAP_METHOD(void set_rich_text_format(const Glib::ustring& format), gtk_text_buffer_set_rich_text_format, ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED)
+
+#ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED
+  /** Accept all formats from clipboard
+   *
+   */
+  void set_rich_text_format_all();
+#endif //GTKMM_MAEMO_EXTENSIONS_ENABLED
+
+  _WRAP_METHOD(Glib::ustring get_rich_text_format() const, gtk_text_buffer_get_rich_text_format, ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED)
+
 #m4begin
 dnl // HACK: Override the default conversion to deal correctly
 dnl // with non-0-terminated strings in insert_text_callback().
