@@ -1,3 +1,14 @@
+2006-11-14  Murray Cumming  <murrayc@murrayc.com>
+
+        * configure.in:
+        * gtk/gtkmmconfig.h.in:
+        * scripts/reduced.m4: Added --enable-api-maemo-extensions
+        configure option, default to false, defining the
+        GTKMM_MAEMO_EXTENSIONS_ENABLED macro.
+        * gtk/src/textbuffer.hg:
+        * gtk/src/textbuffer.ccg: Put the Maemo-specific API in
+        ifdefs, using the optional _WRAP_METHOD() parameter.
+
 2006-11-14  Daniel Elstner  <daniel.kitta@gmail.com>
 
 	* autogen.sh: Wholly replace this script with a critter from one
